--- a/SocketExample/CommonLib/CommonLib.csproj
+++ b/SocketExample/CommonLib/CommonLib.csproj
@@ -39,6 +39,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadSafe\LockFreeQueue.cs" />
+    <Compile Include="ThreadSafe\ThreadSafeBoolean.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
