--- a/SocketExample/CommonLib/CommonLib.csproj
+++ b/SocketExample/CommonLib/CommonLib.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\ExampleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSafe\LockFreeQueue.cs" />
     <Compile Include="ThreadSafe\ThreadSafeBoolean.cs" />
